<resources>
    <string name="app_name">TP7_SANAMENTE</string>
    <string name="title_activity_mis_productos">Mis_Productos</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_filtros_catalogo">FiltrosCatalogo</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="button_aplicarFiltros">"APLICAR FILTROS"</string>
    <string name="button_calificar">"CALIFICAR"</string>
    <string name="button_cancelar">"CANCELAR"</string>
    <string name="button_agregar">"AGREGAR"</string>
    <string name="button_cancelarCompra">"CANCELAR COMPRA"</string>
    <string name="button_darDeBaja">"DAR DE BAJA"</string>
    <string name="button_historial">HISTORIAL</string>
    <string name="button_filtros">"FILTROS"</string>
    <string name="button_modificar">"MODIFICAR"</string>
    <string name="button_registrar">"REGISTRAR"</string>
    <string name="button_imprimir">"IMPRIMIR"</string>
    <string name="button_salir">"SALIR"</string>
    <string name="button_guardar">"GUARDAR"</string>
    <string name="button_ok">"ENTENDIDO"</string>
    <string name="button_volver">"VOLVER"</string>
    <string name="button_volverMenuPrincipal">"VOLVER AL MENU PRINCIPAL"</string>
    <string name="button_destacados">"DESTACADOS"</string>
    <string name="checkbox_celiaco">"Celiaco"</string>
    <string name="checkbox_diabetico">"Diabetico"</string>
    <string name="checkbox_hipertenso">"Hipertenso"</string>
    <string name="hint_ejemplo_apellido">"Apellido"</string>
    <string name="hint_ejemplo_apertura">"Apertura"</string>
    <string name="hint_ejemplo_azucar">"EJ: Azucar"</string>
    <string name="hint_ejemplo_cierre">"Cierre"</string>
    <string name="hint_ejemplo_contraseña">"Contraseña"</string>
    <string name="hint_ejemplo_contraseñaActual">"Contraseña actual"</string>
    <string name="hint_ejemplo_direccion">"Direccion 123"</string>
    <string name="hint_ejemplo_fecha">"01/01/2020"</string>
    <string name="hint_ejemplo_horas">"00:00"</string>
    <string name="hint_ejemplo_ingredientes">"Escriba los ingredientes que le generan alergias, separadas por una coma"</string>
    <string name="hint_ejemplo_leche">"EJ: Leche"</string>
    <string name="hint_ejemplo_nombre">"Ingrese nombre"</string>
    <string name="hint_ejemplo_nuevaContraseña">"Nueva contraseña"</string>
    <string name="hint_ejemplo_stock">"Stock"</string>
    <string name="hint_ejemplo_precio">"Precio"</string>
    <string name="hint_ejemplo_usuario">"Usuario"</string>
    <string name="hint_ejemplo_fechaTarjeta">"mm/aaaa"</string>
    <string name="hint_ejemplo_nombreDeComercio">"Nombre de comercio"</string>
    <string name="hint_ejemplo_repetirContraseña">"Repetir contraseña"</string>
    <string name="switch_ofertas">"OFERTAS"</string>
    <string name="switch_productos">"PRODUCTOS"</string>
    <string name="tv_alergias">"ALERGIAS"</string>
    <string name="tv_direccion">"DIRECCION"</string>
    <string name="tv_dni">"DNI"</string>
    <string name="tv_estado">"ESTADO:"</string>
    <string name="tv_etiquetadoFrontal">"ETIQUETADO FRONTAL"</string>
    <string name="tv_fecha">"FECHA"</string>
    <string name="tv_filtroNombre">"FILTRAR POR NOMBRE"</string>
    <string name="tv_horarios">"HORARIOS"</string>
    <string name="tv_ingredientes">"INGREDIENTES"</string>
    <string name="tv_nombre">"NOMBRE"</string>
    <string name="tv_apellido">"APELLIDO"</string>
    <string name="tv_nombreComercio">"NOMBRE DEL COMERCIO"</string>
    <string name="tv_nombreTarjeta">"NOMBRE DEL PROPIETARIO DE LA TARJETA"</string>
    <string name="tv_nombreUsuario">"NOMBRE DE USUARIO"</string>
    <string name="tv_ordernarPor">"ORDENAR POR:"</string>
    <string name="tv_precio">"PRECIO"</string>
    <string name="tv_recientes">"RECIENTES"</string>
    <string name="tv_usuario">"USUARIO"</string>
    <string name="tv_contraseñaActual">"Contraseña actual"</string>
    <string name="tv_contraseñaNueva">"Contraseña nueva"</string>
    <string name="tv_repetirContraseña">"Repetir contraseña"</string>
    <string name="tv_Contraseña">"CONTRASEÑA"</string>
    <string name="tv_informe">"INCLUYE DATOS DE: "</string>
    <string name="checkbox_facturacion">"Facturacion"</string>
    <string name="checkbox_clientes">"Clientes"</string>
    <string name="checkbox_productos">"Productos"</string>
    <string name="button_generarReporte">"GENERAR PDF"</string>
    <string name="tv_AP_titulo">"INGRESA LOS DATOS EN EL FORMULARIO"</string>
    <string name="hint_ejemplo_nombreDelProducto">"Nombre del producto"</string>
    <string name="tv_CA_comercio">"COMERCIO:"</string>
    <string name="tv_CA_comentario">"COMENTARIO:"</string>
    <string name="tv_CA_puntaje">"PUNTAJE"</string>
    <string name="tv_CA_comercioDescripcion">"Seleccione la cantidad de puntaje clickeando sobre las estrellas."</string>
    <string name="tv_DP_titulo">"PEDIDO N° 45644:"</string>
    <string name="tv_DP_estado">"ESTADO:"</string>
    <string name="tv_DP_comercio">"COMERCIO:"</string>
    <string name="tv_DP_fecha">"FECHA"</string>
    <string name="tv_DP_cantidadProductos">"CANTIDAD DE PRODUCTOS:"</string>
    <string name="tv_DP_montoTotal">"MONTO TOTAL: $"</string>
    <string name="tv_datosCliente">"CLIENTE: 11.234.567 - NOMBRE APELLIDO"</string>
    <string name="rb_califiaciones">CALIFICACIONES</string>
    <string name="tv_prodAptoPara">Producto apto para:</string>
    <string name="tv_contiene">CONTIENE</string>
    <string name="tv_noContiene">NO CONTIENE</string>
    <string name="checkbox_cancelados">Cancelados</string>
    <string name="checkbox_entregados">Entregados</string>
    <string name="checkbox_pendientes">Pendientes</string>
    <string name="tv_enEspera">EN ESPERA</string>
    <string name="tv_fechaDesde">FECHA DESDE</string>
    <string name="tv_fechaHasta">FECHA HASTA</string>
    <string name="tv_sinOrdenar">SIN ORDENAR</string>
    <string name="tv_hs">HS.</string>
    <string name="button_ingresar">INGRESAR</string>
    <string name="button_registrarse">REGISTRARSE</string>
    <string name="tv_LG_titulo">SANAMENTE</string>
    <string name="button_catalogo">CATALOGO</string>
    <string name="button_miCarrito">MI CARRITO</string>
    <string name="button_miUsuario">MI USUARIO</string>
    <string name="button_notificaciones">NOTIFICACIONES</string>
    <string name="button_generarReportes">GENERAR REPORTE</string>
    <string name="button_miCatalogo">MI CATALOGO</string>
    <string name="button_miComercio">MI COMERCIO</string>
    <string name="button_misPedidos">MIS PEDIDOS</string>
    <string name="button_nuevoProducto">NUEVO PRODUCTO</string>
    <string name="hint_ejemplo_codTarjeta">123</string>
    <string name="hint_ejemplo_numTarjeta">1234 5678 1234 5678</string>
    <string name="tv_MP_codigo">CODIGO</string>
    <string name="tv_MP_titulo">COMPLETE LOS DATOS</string>
    <string name="button_finalizarCompra">FINALIZAR COMPRA</string>
    <string name="tv_MP_numTarjeta">NUMERO DE TARJETA</string>
    <string name="tv_MP_tipoTarjeta">TIPO DE TARJETA</string>
    <string name="tv_MP_vencimiento">VENCIMIENTO</string>
    <string name="button_agregarMasProductos">AGREGAR MAS PRODUCTOS AL CARRITO</string>
    <string name="button_eliminar">ELIMINAR</string>
    <string name="button_pagar">PAGAR</string>
    <string name="tv_MCC_montoTotal">MONTO TOTAL:</string>
    <string name="tv_MCC_signoPesos">$</string>
    <string name="button_confirmarEntrega">CONFIRMAR ENTREGA</string>
    <string name="button_verDetalle">VER DETALLE</string>
    <string name="tv_MUC_cuitComercio">CUIT COMERCIO</string>
    <string name="tv_MUC_direccionComercio">DIRECCION DEL COMERCIO</string>
    <string name="tv_MUC_apellidoYnombre">NOMBRE + APELLIDO</string>
    <string name="tv_MUC_propietario">PROPIETARIO</string>
    <string name="button_aplicar">APLICAR</string>
    <string name="button_continuar">CONTINUAR</string>
    <string name="switch_cuentaComerciante">CUENTA COMERCIANTE</string>
    <string name="tv_ru_tipoDeCuenta">TIPO DE CUENTA</string>
    <string name="tv_Cliente">CLIENTE</string>
    <string name="tv_Comercio">COMERCIO</string>
    <string name="toolbar_admin">MENU ADMIN</string>
</resources>